スレッド表示サンプルのリンクが間違っていた

--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,9 @@
 <title>twoB</title>
 </head>
 <body>
-	<div><a href="twoB/action/">twoB</a></div>
+	<div><a href="twoB/action/">twoBルート</a></div>
 	<div><a href="http://github.com/ktachibana/twoB">ソースコード</a></div>
 	<div>板表示サンプル：<a href="twoB/action/toki.2ch.net/dcamera/">デジカメ＠2ch掲示板</a></div>
-	<div>スレッド表示サンプル：<a href="twoB/action/toki.2ch.net/dcamera/">≡▲　猫撮り専科　62匹目　≡ﾟェﾟ≡</a></div>
+	<div>スレッド表示サンプル：<a href="twoB/action/toki.2ch.net/dcamera/1286872114/subscribe5#firstNew">≡▲　猫撮り専科　62匹目　≡ﾟェﾟ≡</a></div>
 </body>
 </html>
